--- a/opcamera/pubspec.yaml
+++ b/opcamera/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   video_player: 
   permission_handler: ^8.0.0+1
   gallery_saver_safety:
-  photo_manager:  
+  photo_manager:  ^1.3.1
+  image_picker: ^0.7.5+4
 
 
 dev_dependencies:
