--- a/opcamera/android/app/src/main/AndroidManifest.xml
+++ b/opcamera/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION"></uses-permission>
    <application
         android:label="opcamera"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:requestLegacyExternalStorage="true">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -43,4 +44,5 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+   
 </manifest>
