--- a/opcamera/pubspec.yaml
+++ b/opcamera/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   gallery_saver_safety:
   photo_manager:  ^1.3.1
   image_picker: ^0.7.5+4
+  flutter_file_manager: ^0.2.0
+  path_provider_ex: ^1.0.1
   
 
 
