--- a/opcamera/pubspec.yaml
+++ b/opcamera/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^0.7.5+4
   flutter_file_manager: ^0.2.0
   path_provider_ex: ^1.0.1
+  photofilters: ^3.0.1
   
 
 
